# huge-commit

./: .gitignore  Cargo.toml  README.md  README.yaml
.github/workflows/: build.yml
src/: app.rs  cli.rs  comment_generator.rs  committer.rs  config.rs  confirmor.rs  main.rs  model.rs  prompt_translator.rs
