[package]
name = "huge-commit"
version = "0.1.2"
edition = "2021"
authors = ["Kazuma Murata <kazzix14@gmail.com>"]
license = "MIT"
description = "make commit message with openai"
repository = "https://github.com/kazzix14/huge-commit"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
directories = "5.0.1"
git2 = "0.18.2"
inquire = "0.7.0"
openai = "1.0.0-alpha.14"
serde = "1.0.197"
thiserror = "1.0.57"
tokio = "1.36.0"
toml = "0.8.10"
